<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/li_main_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <!-- App bar-->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <!--<ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_profile_black" />-->

                <TextView
                    android:id="@+id/tv_profile_lname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/lname"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />



            <LinearLayout
                android:id="@+id/li_profile_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <!--<ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ruls" />-->

                <TextView
                    android:id="@+id/tv_profile_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/username"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />


            <LinearLayout
                android:id="@+id/li_profile_aboutdeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <!--<ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_noti_icon" />-->

                <TextView
                    android:id="@+id/tv_profile_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/email"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <!--<ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ruls" />-->

                <TextView
                    android:id="@+id/tv_profile_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/mobile"
                    android:textSize="15sp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <!--<ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ruls" />-->

                <TextView
                    android:id="@+id/tv_profile_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/age"
                    android:textSize="15sp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imag_age"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <!--<ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ruls" />-->

                <TextView
                    android:id="@+id/tv_profile_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/city"
                    android:textSize="15sp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imag_city"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>