<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/li_main_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:background="@drawable/about_img"/>-->


            <LinearLayout
                android:id="@+id/li_detail_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">


                <TextView
                    android:id="@+id/tv_profile_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/profile"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />


            <LinearLayout
                android:id="@+id/li_us_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">


                <TextView
                    android:id="@+id/tv_profile_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="ارتباط با ما"
                    android:textSize="15sp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />



            <LinearLayout
                android:id="@+id/li_about_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">


                <TextView
                    android:id="@+id/tv_about_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/about_app"
                    android:textSize="15sp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />



            <LinearLayout
                android:id="@+id/li_site_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">


                <TextView
                    android:id="@+id/tv_site_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="@string/site_app"
                    android:textSize="15sp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/img_site"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />


            <LinearLayout
                android:id="@+id/li_exit_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">


                <TextView
                    android:id="@+id/tv_exit_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="20dp"
                    android:text="خروج از حساب کاربری"
                    android:textSize="15sp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="ما را در شبکه های مجازی دنبال کنید"
                android:textColor="@color/material_blue_grey_900"
                android:textSize="16dp"
                android:textStyle="bold" />

            <!-- network -->
            <LinearLayout
                android:id="@+id/li_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/img_insta_profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_insta" />


                <ImageView
                    android:id="@+id/img_tlg_profile"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_tlg" />

                <ImageView
                    android:id="@+id/img_web_profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_web" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>